<resources>
    <string name="app_name">MobilePro</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register user</string>
    <string name="register_user_no">User no</string>
    <string name="wr_password">Your Web Reporting password</string>
    <string name="app_logo_desc">Application image logo</string>
    <string name="login_title">Login</string>
    <string name="home_title">Home</string>
    <string name="statuses">Statuses</string>
    <string name="document_saldo">Document saldo</string>
    <string name="login_error">* Error during login!</string>
    <string name="hi_label">Hi!</string>
    <string name="get_company">get company ws</string>
    <string name="s">* Error during login!</string>
    <string name="first_section_title">Plan of visit on day</string>
    <string name="second_section_title">Customer info</string>
    <string name="third_section_title">Third Section</string>
    <string name="next_button_title">Next</string>
    <string name="empty_waiting_for_sync">Wait sync</string>
    <string name="sale_order_amount_total_template">Amount is: </string>
    <string name="customer_search_title">Find customer: </string>
    <string name="customer_search_filter">Find by customer no:</string>
    <string name="customer_block_status_spinner_title">Filter by status:</string>
    <string name="contact_search_title">Find contact: </string>
    <string name="invoice_document_type_label_text">Find by document type:</string>
    <string name="invoice_document_open_status_label_text">Find by document open status:</string>
    <string name="item_search_title">Find item: </string>
    <string name="item_block_status_spinner_title">Filter by status</string>
    <string name="invoice_document_no">Doc no.: </string>
    <string name="invoice_document_type">Doc type: </string>
    <string name="invoice_amount_total">Amount is: </string>
    <string name="invoice_amount_remaining">Remaining amount is: </string>
    <string name="invoice_sync_open_docs_per_customer_button_title">Sync open documents for customer</string>
    <string name="invoice_sync_per_days_button_title">Sync documents for 3 days</string>
    <string name="invoice_due_date">Due date:</string>
    <string name="invoice_lines_sync_button_title">Sync selected document lines</string>
    <string name="dialog_customer_address_sync">Sync customer addresses</string>
    <string name="dialog_customer_contacts_sync">Sync customer contacts</string>
    <string name="sent_orders_status_sync_open_headers_button_title">Preuzmi statuse poslatih porudžbina</string>
    <string name="sent_orders_status_order_date">Order date:</string>
    <string name="sale_order_search_title">Find invoice: </string>
    <string name="sale_order_status_spinner_title">Filter by status</string>
    <string name="empty_visits">No planned visits.</string>
    <string name="empty_sale_orders">No sale orders found.</string>
    <string name="empty_customers">No customer details found.</string>
    <string name="empty_sale_order_lines">No sale order lines found.</string>
    <string name="empty_recorded_visits">No planned or realised visits.</string>
    <string name="hint_search">Search&#8230;</string>
    <string name="save_button_title">Save</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="new_button_title">New</string>
    <string name="sale_person_title">Sale person</string>
    <string name="sale_person_hint">Sale Person</string>
    <string name="customer_title">Customer</string>
    <string name="customer_hint">Customer</string>
    <string name="visit_date_title">Visit Date</string>
    <string name="visit_date_hint">Visit date</string>
    <string name="line_number_title">Line number</string>
    <string name="line_number_hint">Line number</string>
    <string name="entry_type_title">Entry type</string>
    <string name="entry_type_hint">Entry type</string>
    <string name="odometer_title">Odometer</string>
    <string name="odometer_hint">Odometer</string>
    <string name="departure_time_title">Departure time</string>
    <string name="departure_time_hint">Departure time</string>
    <string name="arrival_time_title">Arrival time</string>
    <string name="arrival_time_hint">Arrival time</string>
    <string name="visit_result_title">Visit result</string>
    <string name="visit_result_hint">Visit result</string>
    <string name="note_title">Note</string>
    <string name="reclamation_title">Reclamation</string>
    <string name="note_hint">Note</string>
    <string name="action_button_refresh">Refresh</string>
    <string name="start_visit_button_title">Start visit</string>
    <string name="end_visit_button_title">End visit</string>
    <string name="contact_type_title">Type</string>
    <string name="contact_type_hint">Type</string>
    <string name="contact_name_title">Primary name</string>
    <string name="contact_name_hint">Name</string>
    <string name="contact_name_2_title">Secondary name</string>
    <string name="contact_name_2_hint">Secondary name</string>
    <string name="contact_address_title">Address</string>
    <string name="contact_address_hint">Address</string>
    <string name="contact_city_title">City</string>
    <string name="contact_city_hint">City</string>
    <string name="contact_post_code_title">Post code</string>
    <string name="contact_post_code_hint">Post code</string>
    <string name="contact_phone_title">Phone</string>
    <string name="contact_phone_hint">Phone</string>
    <string name="contact_mobile_phone_title">Mobile phone</string>
    <string name="contact_mobile_phone_hint">Mobile Phone</string>
    <string name="contact_email_title">Email</string>
    <string name="contact_email_hint">Email</string>
    <string name="contact_company_no_title">Company number</string>
    <string name="contact_company_no_hint">Company number</string>
    <string name="contact_company_id_title">Company id</string>
    <string name="contact_company_id_hint">Company id</string>
    <string name="contact_vat_registration_title">Vat registration</string>
    <string name="contact_vat_registration_hint">Vat reg</string>
    <string name="contact_division_title">Division</string>
    <string name="contact_division_hint">Division</string>
    <string name="contact_number_of_blue_coat_title">Num of blue coat</string>
    <string name="contact_number_of_blue_coat_hint">Num of blue coat</string>
    <string name="contact_number_of_grey_coat_title">Num of gray coat</string>
    <string name="contact_number_of_grey_coat_hint">Num of blue coat</string>
    <string name="contact_job_title">Job title</string>
    <string name="contact_job_title_hint">Job title</string>
    <string name="contextual_deactivate">Delete</string>
    <string name="contextual_edit">Edit</string>
    <string name="contextual_add">New</string>
    <string name="contextual_view">View</string>
    <string name="contextual_edit_lines">Edit lines</string>
    <string name="contextual_add_sale_order_line">New line</string>
    <string name="contextual_delete_sale_order_line">Delete line</string>
    <string name="contextual_add_sale_order">New sale order</string>
    <string name="contextual_send_sale_order">Send sale order</string>
    <string name="contextual_view_saldo">Document saldo</string>
    <string name="contextual_verify_sale_order">Verify document</string>
    <string name="contextual_complete_visit">Complete visit</string>
    <string name="contextual_clone_sale_order">Clone sale order</string>
    <string name="contextual_contact_edit">Edit contact</string>
    <string name="contextual_contact_add">Add contact</string>
    <string name="contextual_get_history_sale_order">Get sent document history</string>
    <string name="dialog_title_item_price_qty_load">Price and Quantity</string>
    <string name="dialog_body_item_price_qty_load">Loading price and quantity</string>
    <string name="dialog_title_sale_order_send">Sale Order</string>
    <string name="dialog_title_sale_order_verify">Verify Order</string>
    <string name="dialog_body_sale_order_send">Sending sale order</string>
    <string name="dialog_body_sale_order_verify">Verifying sale order</string>
    <string name="dialog_title_error_in_sync">Sync error</string>
    <string name="dialog_title_invoices_load">Customer leadger entries</string>
    <string name="dialog_body_invoices_load">Loading customer leadger entries</string>
    <string name="dialog_title_sent_orders_status_load">Sent orders statuses</string>
    <string name="dialog_body_sent_orders_status_load">Loading sent orders statuses</string>
    <string name="dialog_title_sync_info">Sync info</string>
    <string name="dialog_title_record_visit">Visit realization</string>
    <string name="customer_address_label">Address</string>
    <string name="title_settings">Settings</string>
    <string name="title_sync_category">Sync manage</string>
    <string name="title_sync_items">Sync items</string>
    <string name="title_sync_planned_visits">Sync planned visits</string>
    <string name="title_sync_realized_visits">Sync realized visits</string>
    <string name="title_sync_customers">Sync customers</string>
    <string name="title_sync_sales_doc">Sync invoices</string>
    <string name="key_sync_check_box">sync_check_box</string>
    <string name="key_sync_planned_visits_check_box">sync_planned_visits_check_box</string>
    <string name="key_sync_realized_visits_check_box">key_sync_realized_visits_check_box</string>
    <string name="key_sync_customers_check_box">key_sync_customers_check_box</string>
    <string name="key_sync_sales_doc_check_box">key_sync_sales_doc_check_box</string>
    <string name="add_potential_customer_menu_title">New byer</string>
    <string name="ecc_menu_title">ECC preview</string>
    <string name="cus_trade_agree_menu_title">Agreement preview</string>
    <string name="sync_all_customers_menu_title">Sync customers</string>
    <string name="cus_trade_agreement_customer_no_label">Customer No.</string>
    <string name="cus_trade_agreement_entry_type_label">Entry type</string>
    <string name="cus_trade_agreement_code_label">Code</string>
    <string name="cus_trade_agreement_minimum_quantity_label">Minimum quantity</string>
    <string name="cus_trade_agreement_starting_date_label">Starting date</string>
    <string name="cus_trade_agreement_ending_date_label">Ending date</string>
    <string name="cus_trade_agreement_actual_discount_label">Actual discount (%)</string>
    <string name="order_condition_status">Order Condition Status</string>
    <string name="financial_control_status">Financial Control Status</string>
    <string name="order_status_for_shipment">Order Status For Shipment</string>
    <string name="order_value_status">Order Value Status</string>
    <string name="menu_sale_order_sent_option">Sale order details</string>
    <string name="menu_sale_order_option">Sale order details</string>
    <string name="menu_visits_option">Visits details</string>
    <string name="day_start_record_visit_menu_title">Day start</string>
    <string name="day_end_record_visit_menu_title">Day end</string>
    <string name="day_end_back_home_visit_menu_title">Back home</string>
    <string name="day_break_visit_menu_title">Break</string>
    <string name="customer_edit_title">Edit</string>
    <string name="visit_customer_no_name_label_title">Customer no and name:</string>
    <string name="visit_date_label_title">Realisation date:</string>
    <string name="visit_time_label_title">Realisation time:</string>
    <string name="visit_odometer_label_title">Odometer value:</string>
    <string name="visit_note_label_title">Note:</string>
    <string name="title_unesite_kilometrazu">Unesite kilometražu</string>
    <string name="postavi_datum">Postavi datum</string>
    <string name="postavi_vreme">Postavi vreme</string>
</resources>