<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/new_sale_order_action_menu_option"
        android:showAsAction="ifRoom|withText"
        android:title="@string/contextual_add_sale_order"/>
     <item
        android:id="@+id/edit_lines_sale_order_action_menu_option"
        android:showAsAction="ifRoom|withText"
        android:title="@string/contextual_edit_lines"/>
     <item
        android:id="@+id/verify_sale_order_action_menu_option"
        android:showAsAction="ifRoom|withText"
        android:title="@string/contextual_verify_sale_order"/>
     <item
        android:id="@+id/send_sale_order_action_menu_option"
        android:showAsAction="ifRoom|withText"
        android:title="@string/contextual_send_sale_order"/>
     <item
        android:id="@+id/clone_sale_order_menu_option"
        android:showAsAction="ifRoom|withText"
        android:title="@string/contextual_clone_sale_order"/>
     <item
        android:id="@+id/get_history_sale_order_menu_option"
        android:showAsAction="ifRoom|withText"
        android:title="@string/contextual_get_history_sale_order"/>
</menu>