<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_new_potential_customer"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_potential_customer_menu_title"/>
    <item
        android:id="@+id/create_ecc_activity"
        android:showAsAction="ifRoom|withText"
        android:title="@string/ecc_menu_title"/>
    <item
        android:id="@+id/create_cus_trade_agree_activity"
        android:showAsAction="ifRoom|withText"
        android:title="@string/cus_trade_agree_menu_title"/>
    <item
        android:id="@+id/sync_all_customers"
        android:title="@string/sync_all_customers_menu_title"/>
    <item
        android:id="@+id/edit_customers"
        android:showAsAction="ifRoom|withText"
        android:title="@string/customer_edit_title"/>
    
    <item
        android:id="@+id/menu_customer_from_potential"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_customer_create_from_potential"/>

</menu>