<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="640dp"
    android:orientation="vertical" >

    <TextView
        style="@style/AddEdit_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:gravity="center_vertical"
        android:text="@string/customer_title" />

    <AutoCompleteTextView
        android:id="@+id/dialog_nova_realizacija_kupac_input"
        style="@style/AddEdit_Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1" />

    <TextView
        style="@style/AddEdit_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:gravity="center_vertical"
        android:text="@string/customer_address_label" />

    <Button
        android:id="@+id/dialog_nova_realizacija_adresa_input"
        style="?android:attr/spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="@style/AddEdit_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:gravity="center_vertical"
                android:text="@string/visit_date_title" />

            <Button
                android:id="@+id/dialog_nova_realizacija_datum_input"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:text="@string/postavi_datum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="@style/AddEdit_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:gravity="center_vertical"
                android:text="@string/arrival_time_hint" />

            <Button
                android:id="@+id/dialog_nova_realizacija_vreme_input"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:text="@string/postavi_vreme" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/AddEdit_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:gravity="center_vertical"
        android:text="@string/title_unesite_kilometrazu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/dialog_nova_realizacija_kilometraza_input"
            style="@style/AddEdit_Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingBottom="15dp" />

        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:layout_weight="1"
            android:background="@drawable/white_button"
            android:gravity="center"
            android:text="OK" />
    </LinearLayout>

</LinearLayout>