<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="640dp"
    android:orientation="vertical" >

    <TextView
        style="@style/AddEdit_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:gravity="center_vertical"
        android:text="@string/customer_title" />

    <AutoCompleteTextView
        android:id="@+id/dialog_novi_plan_kupac_input"
        style="@style/AddEdit_Value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownWidth="match_parent"
        android:completionThreshold="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="@style/AddEdit_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:gravity="center_vertical"
                android:text="@string/visit_date_title" />

            <Button
                android:id="@+id/dialog_novi_plan_datum_input"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:text="@string/postavi_datum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="@style/AddEdit_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:gravity="center_vertical"
                android:text="@string/arrival_time_hint" />

            <Button
                android:id="@+id/dialog_novi_plan_vreme_input"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:text="@string/postavi_vreme" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dip"
        android:background="@drawable/white_button"
        android:gravity="center"
        android:text="@string/buttonOK" />

</LinearLayout>